--- a/configure.ac
+++ b/configure.ac
@@ -497,6 +497,7 @@ AC_CONFIG_FILES([
     rulesets/Makefile
     server/Makefile
     client/Makefile
+    aiclient/Makefile
     tools/Makefile
     data/Makefile
     data/minimal/Makefile
